Fixing images and grid for buttons be correctly aligned in the project card

--- a/src/components/images/image.css
+++ b/src/components/images/image.css
@@ -1,49 +1,50 @@
 .profile-img {
-    width: 164px;
-    height: 164px;
-    overflow: hidden;
-    border-radius: 50%;
-  }
-  
-  .circle-img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .project-img img {
-    width: 100%;
-    object-fit: cover;
-    border-bottom: 10px solid var(--primary);
-    border-left: 10px solid var(--primary);
-    margin-bottom: 24px;
-  }
-  
-  
-  .article-img img {
-    width: 100%;
-    object-fit: cover;
-    border-bottom: 20px solid var(--secondary);
-    border-left: 20px solid var(--secondary);
-  }
+  width: 164px;
+  height: 164px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.circle-img {
+  width: 100%;
+  height: auto;
+}
+
+.project-img img {
+  width: 100%;
+  min-width: 200px;
+  max-height: 100%;
+  object-fit: cover;
+  border-bottom: 10px solid var(--primary);
+  border-left: 10px solid var(--primary);
+}
+
+
+.article-img img {
+  width: 100%;
+  object-fit: cover;
+  border-bottom: 20px solid var(--secondary);
+  border-left: 20px solid var(--secondary);
+}
 
 
 /* ------------ MEDIA QUERIES ------------ */
 /* ------------ Tablet only ------------ */
 @media (max-width: 1279px) and (min-width: 744px) {
   .arrow-divider {
-      padding: 128px 64px 64px 64px;
+    padding: 128px 64px 64px 64px;
   }
 
   .project-img img {
     width: 200px;
     height: 280px;
     flex-shrink: 0;
-      /* Take up all available vertical space within the article */
+    /* Take up all available vertical space within the article */
   }
 
   .article-img img {
-      width: 100%;
-      max-height: 340px;
+    max-height: 100%;
+    object-fit: cover;
   }
 }
 
@@ -53,12 +54,12 @@
   .project-img img {
     width: 100%;
     height: 280px;
+    border-bottom: 20px solid var(--primary);
+    border-left: 20px solid var(--primary);
     flex-shrink: 0;
   }
 
   .article-img img {
-      width: 100%;
-      max-height: 340px;
+    max-height: 100%
   }
 }
-
