--- a/src/sections/articles/articles.css
+++ b/src/sections/articles/articles.css
@@ -53,6 +53,12 @@
     .article-heading {
         text-align: left;
     }
+
+    .article-img-container {
+        height: 340px;
+        align-self: stretch;
+        border-bottom: 20px solid var(--secondary);
+    }
 }
 
 /* ------------ Desktop only ------------ */
@@ -81,5 +87,20 @@
         max-width: 1226px;
         justify-content: center;
         /* Center the content within the grid */
+    }
+
+    .article-img-container {
+        height: 460px;
+        align-self: stretch;
+        border-bottom: 20px solid var(--secondary);
+    }
+}
+
+/* ------------ Large screen only ------------ */
+@media (min-width: 1520px) {
+    .article-img-container {
+        height: 564px;
+        align-self: stretch;
+        border-bottom: 20px solid var(--secondary);
     }
 }
