--- a/src/sections/projects/projects.css
+++ b/src/sections/projects/projects.css
@@ -21,7 +21,6 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    margin-bottom: 24px;
 }
 
 .button-wrapper {
@@ -44,8 +43,8 @@
 
     .project-card {
         display: grid;
-        grid-template-columns: 1fr 3fr; /* Two columns for the image and text section */
-        grid-template-rows: auto auto; /* Two rows for the image and text section, and the button wrapper */
+        grid-template-columns: auto 1fr; /* Two columns for image and content */
+        grid-template-rows: auto; /* Single row for each item */
         gap: 37px;
     }
     
@@ -61,12 +60,10 @@
     
     .button-wrapper {
         grid-column: 2 / 3; /* Place the button wrapper in the second column */
-        grid-row: 1 / 2; /* Place the button wrapper in the second row */
+        grid-row: 2 / 3; /* Place the button wrapper in the second row */
         display: flex;
         flex-direction: row;
-        width: 100%; /* Occupy the full width of the second column */
         gap: 32px;
-        align-items: end;
     }
     
 
@@ -82,15 +79,10 @@
         gap: 128px;
     }
 
-    .button-wrapper {
-        display: flex;
-        gap: 32px;
-    }
-
     .project-card {
         display: grid;
         grid-template-columns: 1fr 2fr; /* Two columns for the image and text section */
-        grid-template-rows: auto auto; /* Two rows for the image and text section, and the button wrapper */
+        grid-template-rows: auto; 
         gap: 40px;
         max-width: 820px;
     }
